Add new documentations for API
